Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5481

C++ .NET Messaging binding does not expose recent Messaging additions

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.27
    • 0.27
    • .NET Client
    • None

    Description

      This issue is linked to QPID-5441 and tracks the specific .NET fixes for the general binding case.

      The .NET binding is stale for several commits since 2013-03-23 several of which are critical for using the binding with amqp1.0.

      1460198 QPID-4586 Receiver and Sender 'Address getAddress()' added
      1513536 QPID-5040 Message constructor and content getters added
      1520416 QPID-5104 Message setProperties(Variant::Map&) added
      1520673 QPID-4932 Connection reconnect() and getUrl() added
      1555202 QPID-5415 Logger module added

      Issue
      1552476 NO-JIRA Message ostream operator added
      will not be modelled as a bound ostream operator is irrelevant

      Attachments

        Issue Links

          Activity

            People

              chug Charles E. Rolke
              chug Charles E. Rolke
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: