QPID-5481: Messaging API Update - r1460198 QPID-4586 Receiver and Sender 'Address getAddress()' added

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1558549 13f79535-47bb-0310-9956-ffa450edef68